[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/ScenesScripts/TitleScreen/Menu.gd" type="Script" id=1]
[ext_resource path="res://ressources/Graphics/TitleScreen/Menu/titlescreenBackground1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/TitleScreen/ParallaxLayer2.gd" type="Script" id=3]
[ext_resource path="res://Scenes/TitleScreen/ParallaxLayer.gd" type="Script" id=4]
[ext_resource path="res://ressources/Graphics/TitleScreen/Menu/titlescreenLogo.png" type="Texture" id=5]
[ext_resource path="res://Scenes/TitleScreen/ParallaxBackground.gd" type="Script" id=6]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/titlescreenSprite1.png-5547b52cb4294601994d380aac7dbef7.stex"

[node name="TitleScreenMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -68.0
margin_right = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 110.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Nouvelle partie"

[node name="CreditButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 110.0
margin_bottom = 44.0
text = "Cr√©dits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 110.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quitter"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 6 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1800, 0 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 30, 299 )
texture = ExtResource( 2 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 14100, 0 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 12, 303 )
texture = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 514, 301 )
texture = ExtResource( 5 )

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditButton" to="." method="_on_CreditButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
